--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-router-dom": "^6.15.0"
+    "react-range": "^1.8.14",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.15.0",
+    "react-use": "^17.4.0"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
