--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-indiana-drag-scroll": "^2.2.0",
     "react-range": "^1.8.14",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
